[gd_scene load_steps=6 format=3 uid="uid://c8yvelgj3rqi6"]

[ext_resource type="Theme" uid="uid://dkxiakuxtv3c5" path="res://scenes/ui/sketch_theme.tres" id="1_lmkfu"]
[ext_resource type="Script" path="res://scripts/ui/mission_panel.gd" id="1_pgc7n"]
[ext_resource type="Texture2D" uid="uid://dutu0olvdwa37" path="res://sprites/characters/Franch Token.png" id="2_du86k"]
[ext_resource type="FontFile" uid="uid://dxx340jybsylj" path="res://fonts/JMH Typewriter-Black.ttf" id="3_3emmr"]
[ext_resource type="FontFile" uid="uid://tpmg7wha0yio" path="res://fonts/JMH Typewriter-Bold.ttf" id="3_phhcq"]

[node name="MissionPanel" type="PanelContainer"]
theme = ExtResource("1_lmkfu")
script = ExtResource("1_pgc7n")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="MissionIcon" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_du86k")
expand_mode = 5
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_constants/separation = 10

[node name="MissionName" type="RichTextLabel" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("3_3emmr")
theme_override_font_sizes/normal_font_size = 15
bbcode_enabled = true
text = "Escort Mission"
fit_content = true
scroll_active = false

[node name="MissionDescription" type="RichTextLabel" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("3_phhcq")
theme_override_font_sizes/normal_font_size = 12
text = "Mission Description Mission Description Mission Description Mission Description Mission Description "
fit_content = true
scroll_active = false

[node name="Reward" type="RichTextLabel" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_colors/default_color = Color(0.787569, 0.787569, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_3emmr")
text = "Reward: 200"
fit_content = true
scroll_active = false

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
